--- a/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
@@ -20,13 +20,23 @@
                 android:layout_height="224dp"
                 android:background="@drawable/myInfomation_bgImage"
                 android:clickable="true">
-                <ImageView
+            <!--                <ImageView
                     android:layout_width="86dp"
                     android:layout_height="86dp"
                     android:layout_centerHorizontal="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="51dp"
                     android:src="@drawable/user_center_default"
+                    android:id="@+id/img_head" />-->
+                <eldyoungandroidapp.common.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="86dp"
+                    android:layout_height="86dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="51dp"
+                    android:src="@drawable/user_center_default"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="@color/white"
                     android:id="@+id/img_head" />
                 <ImageView
                     android:id="@+id/img_setting"
