--- a/EldYoungAndroidApp/Resources/layout/PersonBasicLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonBasicLayout.axml
@@ -18,59 +18,63 @@
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
-                    android:layout_height="match_parent"
-                    android:text="用户名:" />
+                    android:layout_height="wrap_content"
+                    android:text="用户名" />
                 <TextView
                     style="@style/personbasic_value"
                     android:id="@+id/tv_userName"
-                    android:layout_height="match_parent"
-                    android:text="mp哈哈" />
+                    android:layout_height="40dp"
+                    android:text="" />
             </LinearLayout>
         <!--真实姓名 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
-                    android:layout_height="match_parent"
-                    android:text="真实姓名:" />
+                    android:layout_height="wrap_content"
+                    android:text="真实姓名" />
                 <EditText
                     style="@style/personbasic_value"
                     android:id="@+id/edit_trueName"
-                    android:layout_height="match_parent"
+                    android:layout_height="40dp"
                     android:padding="2dp"
-                    android:text="孟婆"
-                    android:inputType="textPersonName" />
+                    android:hint="请输入真实姓名"
+                    android:inputType="textPersonName"
+                    android:background="@null" />
             </LinearLayout>
         <!--身份证号码 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="身份证号码:" />
+                    android:text="身份证号码" />
                 <EditText
                     style="@style/personbasic_value"
                     android:id="@+id/edit_IdCardNo"
-                    android:layout_height="match_parent"
+                    android:layout_height="40dp"
                     android:padding="2dp"
-                    android:text="55659452212321541545" />
+                    android:hint="请输入身份证号码"
+                    android:background="@null" />
             </LinearLayout>
         <!--性别 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="性别:" />
+                    android:text="性别" />
                 <RadioGroup
                     style="@style/personbasic_value"
                     android:id="@+id/radioGroup"
@@ -95,80 +99,95 @@
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="生日:" />
+                    android:text="生日" />
                 <EditText
                     style="@style/personbasic_value"
                     android:id="@+id/edit_birth"
-                    android:layout_height="match_parent" />
+                    android:layout_height="40dp"
+                    android:background="@null"
+                    android:hint="点击选择出生日期" />
             </LinearLayout>
         <!--手机号码 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="13dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="手机号码:" />
-                <TextView
+                    android:text="手机号码" />
+                <EditText
                     style="@style/personbasic_value"
-                    android:id="@+id/tv_phoneNumberOne"
-                    android:layout_height="match_parent"
-                    android:text="" />
+                    android:id="@+id/edit_phoneNumberOne"
+                    android:layout_height="40dp"
+                    android:background="@null"
+                    android:padding="2dp"
+                    android:hint="请输入手机号" />
             </LinearLayout>
         <!--固定电话 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="固定电话:" />
+                    android:text="固定电话" />
                 <EditText
                     style="@style/personbasic_value"
                     android:id="@+id/edit_fixedPhone"
-                    android:layout_height="match_parent"
+                    android:layout_height="40dp"
                     android:inputType="phone"
-                    android:text="02545896325" />
+                    android:text="02545896325"
+                    android:background="@null"
+                    android:hint="请输入固定电话" />
             </LinearLayout>
         <!--电子邮箱 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="1dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="电子邮箱:" />
+                    android:text="电子邮箱" />
                 <EditText
                     style="@style/personbasic_value"
                     android:id="@+id/edit_email"
-                    android:layout_height="match_parent"
+                    android:layout_height="40dp"
                     android:padding="2dp"
                     android:inputType="textEmailAddress"
-                    android:text="lq.linknet@gmail.com" />
+                    android:text="lq.linknet@gmail.com"
+                    android:background="@null"
+                    android:hint="请输入电子邮箱" />
             </LinearLayout>
         <!--身份证所在地 -->
             <LinearLayout
                 style="@style/personbasic_ll_layout"
                 android:orientation="horizontal"
-                android:layout_width="match_parent">
+                android:layout_width="match_parent"
+                android:layout_marginTop="13dp">
                 <TextView
                     style="@style/personbasic_tv_key"
                     android:layout_height="match_parent"
-                    android:text="身份证所在地:" />
+                    android:text="身份证所在地" />
                 <EditText
                     style="@style/personbasic_value"
                     android:id="@+id/edit_idCardLocation"
-                    android:layout_height="match_parent"
+                    android:layout_height="40dp"
                     android:padding="2dp"
-                    android:inputType="textEmailAddress"
-                    android:text="安徽省马鞍山市花山区" />
+                    android:inputType="text"
+                    android:text="安徽省马鞍山市花山区"
+                    android:background="@null"
+                    android:hint="请输入身份证所在地" />
             </LinearLayout>
         <!--实际住址 -->
         <!--            <LinearLayout
@@ -196,12 +215,12 @@
                 android:layout_height="80dp"
                 android:background="@color/white"
                 android:orientation="horizontal"
-                android:layout_marginTop="3dp">
+                android:layout_marginTop="1dp">
                 <TextView
                     android:layout_height="wrap_content"
                     android:layout_width="80dp"
                     android:text="实际住址:"
-                    android:textColor="@color/ingray"
+                    android:textColor="@color/darkgray"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp" />
                 <LinearLayout
@@ -214,16 +233,22 @@
                         android:id="@+id/edit_locationthreelevel"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:hint="点击选择省市区"
+                        android:textColor="@color/ingray"
+                        android:textColorHint="@color/ingray"
+                        android:textSize="14sp" />
                     <EditText
                         android:id="@+id/edit_locationdeatil"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:hint="详细地址"
-                        android:textColor="@color/darkgray"
+                        android:hint="输入详细地址"
+                        android:textColor="@color/ingray"
                         android:textColorHint="@color/ingray"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:background="@null" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
