--- a/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
@@ -6,9 +6,9 @@
     android:minWidth="25px"
     android:minHeight="25px"
     android:id="@+id/ll_person">
-    <ScrollView
+    <eldyoungandroidapp.common.CustomScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="vertical">
         <LinearLayout
             android:orientation="vertical"
@@ -20,7 +20,7 @@
                 android:layout_height="224dp"
                 android:background="@drawable/myInfomation_bgImage"
                 android:clickable="true">
-                <eldyoungandroidapp.common.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                <eldyoungandroidapp.common.CircleImageView
                     android:layout_width="86dp"
                     android:layout_height="86dp"
                     android:layout_centerHorizontal="true"
@@ -223,5 +223,5 @@
                     android:src="@drawable/callcustomphoneselector" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </eldyoungandroidapp.common.CustomScrollView>
 </LinearLayout>
