--- a/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
@@ -6,7 +6,8 @@
     <eldyoungandroidapp.common.CustomScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:layout_marginTop="15dp">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
