--- a/EldYoungAndroidApp/Resources/layout/adviceRecordListItemView.axml
+++ b/EldYoungAndroidApp/Resources/layout/adviceRecordListItemView.axml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/advicelistitemview"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="100dp"
-    android:background="@color/white"
-    android:id="@+id/advicelistitemview">
+    android:layout_height="80dp"
+    android:background="@color/white">
     <ImageView
         android:id="@+id/img_adviceType"
         android:layout_width="wrap_content"
@@ -14,7 +14,7 @@
         android:layout_marginTop="5dp" />
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_margin="5dp">
@@ -25,20 +25,21 @@
                 android:id="@+id/tv_adviceTitle"
                 android:layout_alignParentLeft="true"
                 android:layout_height="match_parent"
-                android:layout_width="250dp"
-                android:text=""
+                android:layout_width="230dp"
+                android:text="dfdsafsdfadfasdfasdf"
                 android:ellipsize="end"
                 android:lines="1"
                 android:textColor="@color/darkgray"
-                android:gravity="center" />
+                android:gravity="left" />
             <TextView
                 android:id="@+id/tv_adviceTime"
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="2015-01-03"
+                android:text="2015-01-03 06:42:33"
                 android:layout_alignParentRight="true"
                 android:textColor="@color/lightgray"
-                android:gravity="center" />
+                android:gravity="left"
+                android:textSize="12sp" />
         </RelativeLayout>
         <TextView
             android:id="@+id/tv_adviceContent"
@@ -46,9 +47,10 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textColor="@color/ingray"
-            android:text=""
+            android:text="dsafdsafasdfasdf"
             android:lines="2"
             android:ellipsize="end"
-            android:gravity="center" />
+            android:gravity="left"
+            android:layout_marginBottom="5dp" />
     </LinearLayout>
 </LinearLayout>
