--- a/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent">
     <eldyoungandroidapp.common.CustomScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="vertical">
         <LinearLayout
             android:orientation="vertical"
