--- a/EldYoungAndroidApp/Resources/layout/MyAlarmFragLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/MyAlarmFragLayout.axml
@@ -7,7 +7,7 @@
     android:minHeight="25px">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="80dp"
         android:background="@color/white"
         android:orientation="vertical">
         <LinearLayout
@@ -61,35 +61,11 @@
                 android:layout_marginLeft="5dp"
                 android:textSize="12sp"
                 android:layout_gravity="center_vertical" />
-            <RadioGroup
-                android:id="@+id/rgp_alarmWay"
+            <Spinner
+                android:id="@+id/sp_alarmType"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_gravity="center_vertical"
-                android:gravity="center">
-                <RadioButton
-                    android:id="@+id/rbtn_paul"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="PAUL"
-                    android:textColor="@color/lightgray"
-                    android:button="@drawable/radiobutton_selector"
-                    android:drawablePadding="20dp" />
-                <RadioButton
-                    android:id="@+id/rbtn_trip"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="摔倒"
-                    android:checked="true"
-                    android:textColor="@color/lightgray"
-                    android:button="@drawable/radiobutton_selector"
-                    android:drawablePadding="20dp" />
-            </RadioGroup>
+                android:layout_height="match_parent" />
             <Button
                 android:id="@+id/btn_my_search"
                 android:layout_width="60dp"
